Fix float alignment in kanban-list.component.html

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,3 +94,6 @@ $gutter: 1rem; //for primeflex grid system
         width: 10rem;
     }
 }
+.float-right {
+    float: right;
+}
